#109 | Adjusted naming convention for Bean and Type System
- moved TS files
- renaming `hybris` -> `SAP Commerce`
- fixed javadocs
- fixed project import
- java 11 API usage